ops/sbx/ingress.health.http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sbx-health-http
  namespace: magistrala
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^ /health break;
spec:
  ingressClassName: nginx
  rules:
  - host: sbx.gobee.io
    http:
      paths:
      - path: /http/health
        pathType: Exact
        backend:
          service:
            name: http
            port:
              number: 8008
