ops/sbx/ingress.health.yaml
# Copyright (c) CHOOVIO Inc.
# SPDX-License-Identifier: Apache-2.0
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sbx-health
  namespace: magistrala
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /health
spec:
  ingressClassName: nginx
  rules:
  - host: sbx.gobee.io
    http:
      paths:
      - path: /http/health
        pathType: Exact
        backend:
          service:
            name: http
            port:
              number: 8008
      - path: /ws/health
        pathType: Exact
        backend:
          service:
            name: ws
            port:
              number: 8186
