ops/sbx/ingress.yaml
# Copyright (c) CHOOVIO Inc.
# SPDX-License-Identifier: Apache-2.0
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sbx
  namespace: magistrala
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/server-snippet: |
      location = /http/healthz { return 404; }
      location = /ws/healthz { return 404; }
spec:
  ingressClassName: nginx
  rules:
    - host: sbx.gobee.io
      http:
        paths:
          - path: /http(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: http
                port:
                  number: 8008
          - path: /ws(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ws
                port:
                  number: 8186
